<resources>
    <string name="app_name">Login project</string>
    <string name="shared_pref_name">com.example.loginproject.PREFERENCE_FILE_KEY</string>

    <string name="onboarding_page_1_title">Explore the world easily</string>
    <string name="onboarding_page_1_description">To your desire</string>

    <string name="onboarding_page_2_title">Reach the unknown spot</string>
    <string name="onboarding_page_2_description">To your destination</string>

    <string name="onboarding_page_3_title">Make connects with explora</string>
    <string name="onboarding_page_3_description">To your dream trip</string>

    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>

    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="registered_successfully">Account registered successfully</string>
    <string name="already_registered">Email already registered. Try another.</string>

    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>

    <string name="valid_email">Valid email</string>
    <string name="strong_password">Strong password</string>

    <string name="already_have_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="new_member">New member?</string>
    <string name="register_now">Register now</string>

    <string name="button_next">Next</string>
</resources>